# website-extractor

./: .gitignore  CLAUDE.md  LICENSE  Makefile  RAG_CHECKLIST.md  RAG_REVIEW.md  README.md  bobobox.com.md  celery_app.py  example.com.md  example_rag_query.py  main.py  pyproject.toml  sisi.id.json  tasks.py
.windsurf/rules/: python.md
core/: models.py  settings.py
core/migrations/: 0001_initial.py
scrapes/: admin.py  apps.py  chunking.py  methods.py  models.py  rag.py
scrapes/eval/: queries.yaml  run_eval.py
scrapes/eval/results/: baseline_2026-04-22.json  phase4_2026-04-22.json
scrapes/management/commands/: index_websites.py  scrape_url.py
scrapes/migrations/: 0001_initial.py  0002_ragquerylog_chunk_search_vector_and_more.py  0002_website_images.py  0003_alter_website_options_and_more.py  0004_alter_scrape_url.py  0005_website_chunks_website_embeddings_website_is_indexed_and_more.py
scrapes/tests/: test_chunking.py  test_rag.py  test_search.py
