[project]
name = "website-extractor"
version = "0.1.0"
description = "Scrape website content"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "ruff>=0.15.1",
    "certifi>=2026.1.4",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
    "django>=5.2.11",
    "bson>=0.5.10",
    "dotenv>=0.9.9",
    "gunicorn>=25.1.0",
    "whitenoise>=6.11.0",
]
